[package]
name = "isometric"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.17" # make sure this is the latest version
bevy_egui = "0.38.0"
bevy_renet = "3.0.0"
bincode = "2.0.1"
fastrand = "2.3.0"
renet = "1.2.0"
renet_visualizer = "1.1.0"
serde = { version = "1.0", features = ["derive"] }
steamworks = { version = "0.12.2", optional = true }